# LoudBang

./: AUTHORS  CODE-OF-CONDUCT.md  README  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/aq/metallists/loudbang/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cppfft/fftw-3.3.8/: CMakeLists.txt
app/src/main/java/aq/metallists/loudbang/: AboutWindow.java  LBMainWindow.java  LBService.java  LBSpotUploadService.java  LogaFragment.java  LoudBangApplication.java  MainActivity.java  MessageDetailsActivity.java  SettingsActivity.java
app/src/main/java/aq/metallists/loudbang/cutil/: Bandplan.java  CJarInterface.java  DBHelper.java  DBToXMLConverter.java  WSPRMessage.java  WSPRNetSender.java
app/src/main/java/aq/metallists/loudbang/ui/main/: PageViewModel.java  PlaceholderFragment.java  SectionsPagerAdapter.java
app/src/main/jni/: jni_link.h  libloud.cpp  locator_position_interface.cpp
app/src/main/jni/lbenc2/: coder.c  wenc.c  wenc.h
app/src/main/jni/wsprd/: Makefile.MinGW  Makefile.win32  init_random_seed.c  init_random_seed.h  jelinek.h  nhash.c  osdwspr.f90  test_wspr.f90  wsprd.c  wsprd_utils.c
app/src/main/res/drawable/: ic_bomb.xml  ic_bomb_colorful.xml
app/src/main/res/layout/: activity_about_window.xml  activity_lbmain_window.xml  activity_main.xml  activity_message_details.xml  content_scrolling.xml  fragment_loga.xml  fragment_status.xml  log_entry_layout.xml  msglog_layout.xml  settings_activity.xml
app/src/main/res/menu/: mainmenu.xml
app/src/main/res/values/: arrays.xml  dimens.xml  ic_launcher_background.xml  strings.xml
app/src/main/res/values-ru/: arrays.xml  strings.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/aq/metallists/loudbang/: ExampleUnitTest.java
(+29 files in other folders)
